--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Document</title>
-</head>
-<body>
-
-    
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <title>AgriPlus</title>
+  </head>
+  <body>
+    <!-- nav bar starts here -->
+    <div class="nav">
+      <ul class="nav-ul">
+        <li><a href="" class="logo">AgriPlus</a></li>
+        <li>
+          <div class="nav-links">
+            <ul class="links">
+              <li><a class="nav-hover" href="#">Home</a></li>
+              <li><a class="nav-hover" href="#">About</a></li>
+              <li><a class="nav-hover" href="#">Products</a></li>
+              <li><a class="nav-hover" href="#">Contact us</a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="nav-getstarted">
+            <ul class="login">
+              <li><a class="nav-hover" href="#">Login</a></li>
+              <li>
+                <a href="" class="btn"> Get Started </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <!-- nav bar ends here -->
+  </body>
 </html>
