add footer section

--- a/index.html
+++ b/index.html
@@ -192,40 +192,96 @@
     <!-- Customer Feedback section starts here -->
     <div class="feedback">
       <div class="headers">
-        <h3 class="heading">Our Esteemed Customers.</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste,
-          delectus!
-        </p>
+        <h3 class="heading">What our Esteemed customers has to say about us</h3>
       </div>
-      <div class="cards">
+      <div class="feedback-cards">
         <div class="customer-card">
-          <h2>Alex Godwin</h2>
-          <h5>South Africa</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="customer-txt">
+            <p>"The most efficient way to get fresh produce."</p>
+          </div>
+          <div class="customer-img">
+            <ul>
+              <li>
+                <img class="profile-img" src="Assets/rebecca.png" alt="" />
+              </li>
+              <li>Rebecca Mkulima</li>
+            </ul>
+          </div>
         </div>
         <div class="customer-card">
-          <h2>Alex Godwin</h2>
-          <h5>South Africa</h5>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo modi
-          </p>
+          <div class="customer-txt">
+            <p>"AgriPlus is the place to market your produce."</p>
+          </div>
+          <div class="customer-img">
+            <ul>
+              <li><img class="profile-img" src="Assets/john.png" alt="" /></li>
+              <li>John Joe</li>
+            </ul>
+          </div>
         </div>
         <div class="customer-card">
-          <h2>Alex Godwin</h2>
-          <h5>South Africa</h5>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo modi
-            inventore totam quia voluptas blanditiis laboriosam, provident
-            cumque eum? Possimus perferendis hic omnis nobis. Corrupti tempora
-            cupiditate assumenda adipisci! Placeat sit laudantium deleniti qui
-            excepturi adipisci nostrum minus sapiente ea?
-          </p>
+          <div class="customer-txt">
+            <p>"Connecting rural to urban through business"</p>
+          </div>
+          <div class="customer-img">
+            <ul>
+              <li>
+                <img class="profile-img" src="Assets/lavington.png" alt="" />
+              </li>
+              <li>Lavington dwellers</li>
+            </ul>
+          </div>
         </div>
       </div>
-      <a href="" class="btn right-btn">View more</a>
+
+      <a href="" class="btn right-btn">Read more</a>
     </div>
 
     <!-- Customer Feedback section ends here -->
+    <!-- Footer section starts here -->
+    <footer>
+      <div class="keep-in-touch">
+        <h3 class="heading">We'd Like to keep in touch.</h3>
+        <p>Subscribe to our newsletter</p>
+        <ul>
+          <li>Enter your email adress</li>
+          <li><a href="" class="btn"> Subscribe </a></li>
+        </ul>
+      </div>
+      <div class="summary">
+        <div class="summary">
+          <h2>AgriPlus</h2>
+          <p>Quality Farm produce through buying and selling</p>
+        </div>
+        <div class="Company">
+          <h2>Company</h2>
+          <ul>
+            <li>About</li>
+            <li>Product</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div class="Products">
+          <h2>Products</h2>
+          <ul>
+            <li>Dairy</li>
+            <li>Cereals</li>
+            <li>Vegetables & Fruits</li>
+            <li>More...</li>
+          </ul>
+        </div>
+        <div class="Others">
+          <h2>Others</h2>
+          <ul>
+            <li>FAQs</li>
+            <li>Terms of Services</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </div>
+        <p>All rights reserved, terms & conditions applied</p>
+      </div>
+      
+    </footer>
+    <!-- Footer section ends here -->
   </body>
 </html>
