Style the navbar and add the landing page image

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
           <a href="" class="btn">Explore More</a>
         </div>
       </div>
+      <div class="buy-sell-image">
+        <img src="Assets/fruits.png" alt="Fruits">
+      </div>
 
       <div class="box-shadow">
         <div class="vendors">
