--- a/index.html
+++ b/index.html
@@ -1,290 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <title>AgriPlus</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- nav bar starts here -->
     <div class="nav">
-      <ul class="nav-ul">
-        <li><a href="" class="logo">AgriPlus</a></li>
-        <li>
-          <div class="nav-links">
-            <ul class="links">
-              <li><a class="nav-hover" href="#">Home</a></li>
-              <li><a class="nav-hover" href="#">About</a></li>
-              <li><a class="nav-hover" href="#">Products</a></li>
-              <li><a class="nav-hover" href="#">Contact us</a></li>
-            </ul>
-          </div>
-        </li>
-        <li>
-          <div class="nav-getstarted">
-            <ul class="login">
-              <li><a class="nav-hover" href="#">Login</a></li>
-              <li>
-                <a href="" class="btn"> Get Started </a>
-              </li>
-            </ul>
-          </div>
-        </li>
-      </ul>
+        <ul class="nav-ul">
+            <li><a href="" class="logo">AgriPlus</a></li>
+            <li>
+                <div class="nav-links">
+                    <ul class="links">
+                        <li><a class="nav-hover" href="#">Home</a></li>
+                        <li><a class="nav-hover" href="#">About</a></li>
+                        <li><a class="nav-hover" href="#">Products</a></li>
+                        <li><a class="nav-hover" href="#">Contact us</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="nav-getstarted">
+                    <ul class="login">
+                        <li><a class="nav-hover" href="#">Login</a></li>
+                        <li>
+                            <a href="" class="btn"> Get Started </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
     </div>
     <!-- nav bar ends here -->
     <!-- buying section starts here -->
     <div class="Buy-sell">
-      <div class="Buy-sell-text">
-        <h2 class="heading">
-          Buying and selling quality farm produce has never been easier.
-        </h2>
-        <p>
-          Agriplus is here to have you sorted, you can order farm produce from
-          the farmers, harvesters, and producers directly.
-        </p>
+        <div class="Buy-sell-text">
+            <h2 class="intro-heading">
+                Buying and selling quality farm produce has never been easier.
+            </h2>
+            <p>
+                Agriplus is here to have you sorted, you can order farm produce from
+                the farmers, harvesters, and producers directly.
+            </p>
 
-        <div class="buttons">
-          <a href="" class="btn">Explore More</a>
+            <div class="buttons">
+                <a href="" class="btn">Explore More</a>
+            </div>
         </div>
-      </div>
-      <div class="buy-sell-image">
-        <img src="Assets/fruits.png" alt="Fruits">
-      </div>
+        <div class="buy-sell-image">
+            <img src="Assets/fruits.png" alt="Fruits" class="fruits">
+        </div>
 
-      <div class="box-shadow">
-        <div class="vendors">
-          <ul>
-            <li class="numbers">200+</li>
-            <li class="letters">Verified Vendors</li>
-          </ul>
+        <div class="box-shadow">
+            <div class="vendors">
+                <ul>
+                    <li class="numbers">200+</li>
+                    <li class="letters">Verified Vendors</li>
+                </ul>
+            </div>
+            <div class="vendors">
+                <ul>
+                    <li class="numbers">105+</li>
+                    <li class="letters">Happy Customers</li>
+                </ul>
+            </div>
+            <div class="vendors">
+                <ul>
+                    <li class="numbers">2000+</li>
+                    <li class="letters">Nation Wide Customers</li>
+                </ul>
+            </div>
         </div>
-        <div class="vendors">
-          <ul>
-            <li class="numbers">105+</li>
-            <li class="letters">Happy Customers</li>
-          </ul>
-        </div>
-        <div class="vendors">
-          <ul>
-            <li class="numbers">2000+</li>
-            <li class="letters">Nation Wide Customers</li>
-          </ul>
-        </div>
-      </div>
     </div>
 
     <!-- buying section ends here -->
+    <div class="container">
 
-    <!-- Why we exist starts here -->
+        <!-- Why we exist starts here -->
 
-    <div class="Why-we-exist">
-      <div class="exist-text">
-        <h3 class="heading">Why we exist.</h3>
-        <p>
-          We are built to make your work easier. Like any online ecommerce,
-          Agriplus provide a great platform for farmers to reach their customers
-          throughout the country. We have made it easier to shop from anywhere
-          through the platform.
-        </p>
-      </div>
-      <div class="exist-image">
-        <img class="exist-img" src="Assets/we-exist.png" alt="" />
-      </div>
-    </div>
-
-    <!-- Why we exist ends here -->
-
-    <!-- Products section starts here -->
-    <div class="products">
-      <div class="center">
-        <h3 class="heading">Our Categories of Products.</h3>
-        <p>
-          We go beyond the borders to ensure you get fresh produce from the
-          farm. Our customer satisfaction is our mission.
-        </p>
-      </div>
-      <div class="popular">
-        <h3 class="heading">Most Popular.</h3>
-
-        <div class="product-card">
-          <img class="card-img" src="Assets/carrots.png" alt="" />
-
-          <div class="card-txt">
-            <h4>Fresh carrots</h4>
-            <p>Kinyanjui Farmers Association</p>
-            <h4>Kshs. 200/kg</h4>
-          </div>
+        <div class="Why-we-exist">
+            <div class="exist-text">
+                <h3 class="heading">Why we exist.</h3>
+                <p>
+                    We are built to make your work easier. Like any online ecommerce,
+                    Agriplus provide a great platform for farmers to reach their customers
+                    throughout the country. We have made it easier to shop from anywhere
+                    through the platform.
+                </p>
+            </div>
+            <div class="exist-image">
+                <img class="exist-img" src="Assets/we-exist.png" alt="" />
+            </div>
         </div>
-        <div class="product-card">
-          <img class="card-img" src="Assets/grains.png" alt="" />
 
-          <div class="card-txt">
-            <h4>Cereals</h4>
-            <p>Kenya Cereals Board</p>
-            <h4>Kshs. 5000/bag</h4>
-          </div>
+        <!-- Why we exist ends here -->
+
+        <!-- Products section starts here -->
+        <div class="products">
+            <div class="center">
+                <h3 class="heading">Our Categories of Products.</h3>
+                <p>
+                    We go beyond the borders to ensure you get fresh produce from the
+                    farm. Our customer satisfaction is our mission.
+                </p>
+            </div>
+            <div class="popular">
+                <h3 class="heading">Most Popular.</h3>
+
+                <div class="product-card">
+                    <img class="card-img" src="Assets/carrots.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Fresh carrots</h4>
+                        <p>Kinyanjui Farmers Association</p>
+                        <h4>Kshs. 200/kg</h4>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="card-img" src="Assets/grains.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Cereals</h4>
+                        <p>Kenya Cereals Board</p>
+                        <h4>Kshs. 5000/bag</h4>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="card-img" src="Assets/fish.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Fresh Fish/ Tilapia</h4>
+                        <p>Mr. Otieno</p>
+                        <h4>Kshs. 500/kg</h4>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="card-img" src="Assets/sukumawiki.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Kales/Sukuma Wiki</h4>
+                        <p>Njoki's Farm</p>
+                        <h4>Kshs. 50/bunch</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="newest">
+                <h3 class="heading">Newest Item.</h3>
+
+                <div class="product-card">
+                    <img class="card-img" src="Assets/chicken.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Chicken</h4>
+                        <p>Wafula Farm</p>
+                        <h4>Kshs. 700/kg</h4>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="card-img" src="Assets/ahero.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Ahero/lr Rice</h4>
+                        <p>Ahero Irrigation Board</p>
+                        <h4>Kshs. 200/kg</h4>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="card-img" src="Assets/mursik.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Mursik</h4>
+                        <p>Korir Dairy Farm</p>
+                        <h4>Kshs. 200/ltr</h4>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img class="card-img" src="Assets/tomatoes.png" alt="" />
+
+                    <div class="card-txt">
+                        <h4>Fresh Tomatoes</h4>
+                        <p>TZ Farmers Association</p>
+                        <h4>Kshs. 5000/Crate</h4>
+                    </div>
+                </div>
+            </div>
+            <a href="" class="btn right-btn">See All</a>
         </div>
-        <div class="product-card">
-          <img class="card-img" src="Assets/fish.png" alt="" />
 
-          <div class="card-txt">
-            <h4>Fresh Fish/ Tilapia</h4>
-            <p>Mr. Otieno</p>
-            <h4>Kshs. 500/kg</h4>
-          </div>
+        <!-- Products section ends here -->
+
+        <!-- Customer Feedback section starts here -->
+        <div class="feedback">
+            <div class="headers">
+                <h3 class="heading">What our Esteemed customers has to say about us</h3>
+            </div>
+            <div class="feedback-cards">
+                <div class="customer-card">
+                    <div class="customer-txt">
+                        <p>"The most efficient way to get fresh produce."</p>
+                    </div>
+                    <div class="customer-img">
+                        <ul>
+                            <li>
+                                <img class="profile-img" src="Assets/rebecca.png" alt="" />
+                            </li>
+                            <li>Rebecca Mkulima</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="customer-card">
+                    <div class="customer-txt">
+                        <p>"AgriPlus is the place to market your produce."</p>
+                    </div>
+                    <div class="customer-img">
+                        <ul>
+                            <li><img class="profile-img" src="Assets/john.png" alt="" /></li>
+                            <li>John Joe</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="customer-card">
+                    <div class="customer-txt">
+                        <p>"Connecting rural to urban through business"</p>
+                    </div>
+                    <div class="customer-img">
+                        <ul>
+                            <li>
+                                <img class="profile-img" src="Assets/lavington.png" alt="" />
+                            </li>
+                            <li>Lavington dwellers</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <a href="" class="btn right-btn">Read more</a>
         </div>
-        <div class="product-card">
-          <img class="card-img" src="Assets/sukumawiki.png" alt="" />
-
-          <div class="card-txt">
-            <h4>Kales/Sukuma Wiki</h4>
-            <p>Njoki's Farm</p>
-            <h4>Kshs. 50/bunch</h4>
-          </div>
-        </div>
-      </div>
-      <div class="newest">
-        <h3 class="heading">Newest Item.</h3>
-
-        <div class="product-card">
-          <img class="card-img" src="Assets/chicken.png" alt="" />
-
-          <div class="card-txt">
-            <h4>Chicken</h4>
-            <p>Wafula Farm</p>
-            <h4>Kshs. 700/kg</h4>
-          </div>
-        </div>
-        <div class="product-card">
-          <img class="card-img" src="Assets/ahero.png" alt="" />
-
-          <div class="card-txt">
-            <h4>Ahero/lr Rice</h4>
-            <p>Ahero Irrigation Board</p>
-            <h4>Kshs. 200/kg</h4>
-          </div>
-        </div>
-        <div class="product-card">
-          <img class="card-img" src="Assets/mursik.png" alt="" />
-
-          <div class="card-txt">
-            <h4>Mursik</h4>
-            <p>Korir Dairy Farm</p>
-            <h4>Kshs. 200/ltr</h4>
-          </div>
-        </div>
-        <div class="product-card">
-          <img class="card-img" src="Assets/tomatoes.png" alt="" />
-
-          <div class="card-txt">
-            <h4>Fresh Tomatoes</h4>
-            <p>TZ Farmers Association</p>
-            <h4>Kshs. 5000/Crate</h4>
-          </div>
-        </div>
-      </div>
-      <a href="" class="btn right-btn">See All</a>
-    </div>
-
-    <!-- Products section ends here -->
-
-    <!-- Customer Feedback section starts here -->
-    <div class="feedback">
-      <div class="headers">
-        <h3 class="heading">What our Esteemed customers has to say about us</h3>
-      </div>
-      <div class="feedback-cards">
-        <div class="customer-card">
-          <div class="customer-txt">
-            <p>"The most efficient way to get fresh produce."</p>
-          </div>
-          <div class="customer-img">
-            <ul>
-              <li>
-                <img class="profile-img" src="Assets/rebecca.png" alt="" />
-              </li>
-              <li>Rebecca Mkulima</li>
-            </ul>
-          </div>
-        </div>
-        <div class="customer-card">
-          <div class="customer-txt">
-            <p>"AgriPlus is the place to market your produce."</p>
-          </div>
-          <div class="customer-img">
-            <ul>
-              <li><img class="profile-img" src="Assets/john.png" alt="" /></li>
-              <li>John Joe</li>
-            </ul>
-          </div>
-        </div>
-        <div class="customer-card">
-          <div class="customer-txt">
-            <p>"Connecting rural to urban through business"</p>
-          </div>
-          <div class="customer-img">
-            <ul>
-              <li>
-                <img class="profile-img" src="Assets/lavington.png" alt="" />
-              </li>
-              <li>Lavington dwellers</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <a href="" class="btn right-btn">Read more</a>
     </div>
 
     <!-- Customer Feedback section ends here -->
     <!-- Footer section starts here -->
     <footer>
-      <div class="keep-in-touch">
-        <h3 class="heading">We'd Like to keep in touch.</h3>
-        <p>Subscribe to our newsletter</p>
-        <ul>
-          <li>Enter your email adress</li>
-          <li><a href="" class="btn"> Subscribe </a></li>
-        </ul>
-      </div>
-      <div class="summary">
+        <div class="keep-in-touch">
+            <h3 class="heading">We'd Like to keep in touch.</h3>
+            <p>Subscribe to our newsletter</p>
+            <ul>
+                <li>Enter your email adress</li>
+                <li><a href="" class="btn"> Subscribe </a></li>
+            </ul>
+        </div>
         <div class="summary">
-          <h2>AgriPlus</h2>
-          <p>Quality Farm produce through buying and selling</p>
+            <div class="summary">
+                <h2>AgriPlus</h2>
+                <p>Quality Farm produce through buying and selling</p>
+            </div>
+            <div class="Company">
+                <h2>Company</h2>
+                <ul>
+                    <li>About</li>
+                    <li>Product</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="Products">
+                <h2>Products</h2>
+                <ul>
+                    <li>Dairy</li>
+                    <li>Cereals</li>
+                    <li>Vegetables & Fruits</li>
+                    <li>More...</li>
+                </ul>
+            </div>
+            <div class="Others">
+                <h2>Others</h2>
+                <ul>
+                    <li>FAQs</li>
+                    <li>Terms of Services</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+            <p>All rights reserved, terms & conditions applied</p>
         </div>
-        <div class="Company">
-          <h2>Company</h2>
-          <ul>
-            <li>About</li>
-            <li>Product</li>
-            <li>Contact Us</li>
-          </ul>
-        </div>
-        <div class="Products">
-          <h2>Products</h2>
-          <ul>
-            <li>Dairy</li>
-            <li>Cereals</li>
-            <li>Vegetables & Fruits</li>
-            <li>More...</li>
-          </ul>
-        </div>
-        <div class="Others">
-          <h2>Others</h2>
-          <ul>
-            <li>FAQs</li>
-            <li>Terms of Services</li>
-            <li>Privacy Policy</li>
-          </ul>
-        </div>
-        <p>All rights reserved, terms & conditions applied</p>
-      </div>
-      
+
     </footer>
     <!-- Footer section ends here -->
-  </body>
+</body>
+
 </html>
