Style the buy-sell section to properly position the text and the images

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <h2 class="intro-heading">
                 Buying and selling quality farm produce has never been easier.
             </h2>
-            <p>
+            <p class="intro-paragrapgh">
                 Agriplus is here to have you sorted, you can order farm produce from
                 the farmers, harvesters, and producers directly.
             </p>
 
             <div class="buttons">
-                <a href="" class="btn">Explore More</a>
+                <a href="" class="btn explore">Explore More</a>
             </div>
         </div>
         <div class="buy-sell-image">
