style the why we exist and categories sections

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 
         <div class="Why-we-exist">
             <div class="exist-text">
-                <h3 class="heading">Why we exist.</h3>
+                <div class="border">
+                    <h3 class="heading">Why we exist</h3>
+                </div>
                 <p>
                     We are built to make your work easier. Like any online ecommerce,
                     Agriplus provide a great platform for farmers to reach their customers
@@ -103,14 +105,14 @@
         <!-- Products section starts here -->
         <div class="products">
             <div class="center">
-                <h3 class="heading">Our Categories of Products.</h3>
+                <h3 class="heading">Our Categories of Products</h3>
                 <p>
                     We go beyond the borders to ensure you get fresh produce from the
                     farm. Our customer satisfaction is our mission.
                 </p>
             </div>
             <div class="popular">
-                <h3 class="heading">Most Popular.</h3>
+                <h3 class="heading">Most Popular</h3>
 
                 <div class="product-card">
                     <img class="card-img" src="Assets/carrots.png" alt="" />
