Style the products cards

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     farm. Our customer satisfaction is our mission.
                 </p>
             </div>
-            <div class="popular">
-                <h3 class="heading">Most Popular</h3>
+            <h3 class="heading">Most Popular</h3>
+            <div class="cards">
 
                 <div class="product-card">
                     <img class="card-img" src="Assets/carrots.png" alt="" />
@@ -151,8 +151,8 @@
                     </div>
                 </div>
             </div>
-            <div class="newest">
-                <h3 class="heading">Newest Item.</h3>
+            <h3 class="heading">Newest Item.</h3>
+            <div class="cards">
 
                 <div class="product-card">
                     <img class="card-img" src="Assets/chicken.png" alt="" />
