Style the see all products button

--- a/index.html
+++ b/index.html
@@ -191,8 +191,10 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="btn right-btn">See All</a>
+            <a href="" class="right-btn">See All</a>
         </div>
+
+        <div class="divider"></div>
 
         <!-- Products section ends here -->
 
