Style the customer testimonials section

--- a/index.html
+++ b/index.html
@@ -243,13 +243,8 @@
                 </div>
             </div>
 
-            <a href="" class="btn right-btn">Read more</a>
+            <a href="" class="right-btn">Read more</a>
         </div>
-    </div>
-
-    <!-- Customer Feedback section ends here -->
-    <!-- Footer section starts here -->
-    <footer>
         <div class="keep-in-touch">
             <h3 class="heading">We'd Like to keep in touch.</h3>
             <p>Subscribe to our newsletter</p>
@@ -258,6 +253,11 @@
                 <li><a href="" class="btn"> Subscribe </a></li>
             </ul>
         </div>
+    </div>
+
+    <!-- Customer Feedback section ends here -->
+    <!-- Footer section starts here -->
+    <footer>
         <div class="summary">
             <div class="summary">
                 <h2>AgriPlus</h2>
