Style subscribe section

--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
 
             <a href="" class="right-btn">Read more</a>
         </div>
-        <div class="keep-in-touch">
-            <h3 class="heading">We'd Like to keep in touch.</h3>
-            <p>Subscribe to our newsletter</p>
-            <ul>
-                <li>Enter your email adress</li>
-                <li><a href="" class="btn"> Subscribe </a></li>
-            </ul>
+    </div>
+    <div class="keep-in-touch">
+        <h3 class="heading">We'd Like to keep in touch.</h3>
+        <p>Subscribe to our newsletter</p>
+        <div class="subscribe">
+            <input type="text" class="sub-txt" placeholder="Enter your email">
+            <a class="sub-btn">Subscribe</a>
         </div>
     </div>
 
