Style the footer

--- a/index.html
+++ b/index.html
@@ -258,10 +258,12 @@
     <!-- Customer Feedback section ends here -->
     <!-- Footer section starts here -->
     <footer>
-        <div class="summary">
+        <div class="footer">
             <div class="summary">
-                <h2>AgriPlus</h2>
+                <h2 class="logo">AgriPlus</h2>
                 <p>Quality Farm produce through buying and selling</p>
+
+                
             </div>
             <div class="Company">
                 <h2>Company</h2>
@@ -288,8 +290,8 @@
                     <li>Privacy Policy</li>
                 </ul>
             </div>
-            <p>All rights reserved, terms & conditions applied</p>
         </div>
+        <p class="footer-center">All rights reserved, terms & conditions applied</p>
 
     </footer>
     <!-- Footer section ends here -->
