Add the social icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <title>AgriPlus</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
@@ -205,6 +207,13 @@
             </div>
             <div class="feedback-cards">
                 <div class="customer-card">
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star gray-star fa-2xl"></i>
+                    </div>
                     <div class="customer-txt">
                         <p>"The most efficient way to get fresh produce."</p>
                     </div>
@@ -218,6 +227,13 @@
                     </div>
                 </div>
                 <div class="customer-card">
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                    </div>
                     <div class="customer-txt">
                         <p>"AgriPlus is the place to market your produce."</p>
                     </div>
@@ -229,6 +245,13 @@
                     </div>
                 </div>
                 <div class="customer-card">
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                        <i class="fa-solid fa-star fa-2xl"></i>
+                    </div>
                     <div class="customer-txt">
                         <p>"Connecting rural to urban through business"</p>
                     </div>
@@ -263,7 +286,13 @@
                 <h2 class="logo">AgriPlus</h2>
                 <p>Quality Farm produce through buying and selling</p>
 
-                
+                <div class="icons">
+                    <i class="fa-brands fa-twitter fa-2xl"></i>
+                    <i class="fa-brands fa-facebook fa-2xl"></i>
+                    <i class="fa-brands fa-instagram fa-2xl"></i>
+                </div>
+
+
             </div>
             <div class="Company">
                 <h2>Company</h2>
