Add arrows to the see all and read more buttons

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="right-btn">See All</a>
+            <a href="" class="right-btn">See All <i class="fa-solid fa-arrow-right-long orange fa-xl"></i></a>
         </div>
 
         <div class="divider"></div>
@@ -266,7 +266,7 @@
                 </div>
             </div>
 
-            <a href="" class="right-btn">Read more</a>
+            <a href="" class="right-btn">Read more <i class="fa-solid fa-arrow-right-long orange fa-xl"></i></a>
         </div>
     </div>
     <div class="keep-in-touch">
