--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 
         <div class="Why-we-exist">
             <div class="exist-text">
-                <div class="border">
-                    <h3 class="heading">Why we exist</h3>
-                </div>
+                <h3 class="heading full-heading">
+                    Why we exist
+                    <div class="border"></div>
+                </h3>
                 <p>
                     We are built to make your work easier. Like any online ecommerce,
                     Agriplus provide a great platform for farmers to reach their customers
@@ -107,13 +108,13 @@
         <!-- Products section starts here -->
         <div class="products">
             <div class="center">
-                <h3 class="heading">Our Categories of Products</h3>
+                <h3 class="heading">Our Categories of Products <div class="center-border"></div></h3>
                 <p>
                     We go beyond the borders to ensure you get fresh produce from the
                     farm. Our customer satisfaction is our mission.
                 </p>
             </div>
-            <h3 class="heading">Most Popular</h3>
+            <h3 class="heading full-heading">Most Popular <div class="border"></div></h3>
             <div class="cards">
 
                 <div class="product-card">
@@ -153,7 +154,7 @@
                     </div>
                 </div>
             </div>
-            <h3 class="heading">Newest Item.</h3>
+            <h3 class="heading full-heading">Newest Item <div class="border"></div></h3>
             <div class="cards">
 
                 <div class="product-card">
@@ -193,7 +194,7 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="right-btn">See All <i class="fa-solid fa-arrow-right-long orange fa-xl"></i></a>
+            <a href="" class="right-btn">See all<i class="fa-solid fa-arrow-right-long orange fa-xl"></i> <div class="border-right"></div></a>
         </div>
 
         <div class="divider"></div>
@@ -266,7 +267,7 @@
                 </div>
             </div>
 
-            <a href="" class="right-btn">Read more <i class="fa-solid fa-arrow-right-long orange fa-xl"></i></a>
+            <a href="" class="right-btn">Read more <i class="fa-solid fa-arrow-right-long orange fa-xl"></i> <div class="border-right"></div></a>
         </div>
     </div>
     <div class="keep-in-touch">
